2008-12-24  Peter Bloomfield

	* src/balsa-app.c: (balsa_app_destroy): do not empty trash--it's
	too late.
	* src/main-window.c: in notebook-switch-page callback, check if
	Balsa is quitting.
	* src/save-restore.c: (sr_special_notify, config_mailbox_init):
	weak-ref special mailboxes, and at notify time, if Balsa is
	quitting, empty the trash.

2008-12-21  Paweł Sałek

	* configure.in: we require gnome-keyring >= 1.0
	Remove some of the race conditions as found with helgrind.
	* src/balsa-app.c: do not manually destroy widgets.
	* src/main.c: cleanup explicitly before exit from main, no signals
	needed.
	* libbalsa/mailbox_{imap,local}.c: lock mailbox.
	* libbalsa/mailbox.c: keep the lock a bit longer.
	* libbalsa/libbalsa.c: preregister more object types.
	* libbalsa/imap/imap-{commands,handle}.c: lock the handle.

2008-12-20  Peter Bloomfield

	button for MDN in message composition toolbar (Jean-Luc Coulon)

	* src/balsa-icons.h: define new icon.
	* src/balsa-icons.c: (register_balsa_pixmaps): register it as
	"stock_mail-reply".
	* src/toolbar-factory.c: list it with short label.
	* src/sendmsg-window.c: use it with tooltip.

2008-12-14  Paweł Sałek

	* src/main-window.c: Add ability to display recent messages only.
	* libbalsa/imap-server.c: give more details in error messages.
	* libbalsa/imap/imap-handle.c: ditto.
	* libbalsa/imap/imap-commands.[ch]: Add "peek" argument to 
	imap_mbox_handle_fetch_rfc822().
	
2008-12-06  Peter Bloomfield

	rewrite of libbalsa_insert_with_url

	* libbalsa/mime.c: (libbalsa_unwrap_buffer, mark_urls,
	prescanner, libbalsa_html_encode_hyperlinks):
	pass string length to prescanner;
	(get_ml_url_reg): make sure the url ends with a real url
	character;
	(libbalsa_insert_with_url): avoid allocating and freeing
	strings.
	* libbalsa/misc.h: new signature for libbalsa_url_cb_t.
	* src/balsa-mime-widget-text.c: (balsa_mime_widget_new_text):
	avoid allocating and freeing strings;
	(url_found_cb): new signature for libbalsa_url_cb_t.