@@ -1,5 +1,10 @@
 2008-12-24  Peter Bloomfield
 
+	* src/mailbox-node.c: (balsa_mailbox_node_rescan): handle rescan
+	of whole tree (mn == NULL).
+
+2008-12-24  Peter Bloomfield
+
 	* src/balsa-app.c: (balsa_app_destroy): do not empty trash--it's
 	too late.
 	* src/main-window.c: in notebook-switch-page callback, check if
